--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gorb (0.2.0) unstable; urgency=medium
+
+  * Support TLS for store backend
+
+ -- Artem Aleksandrov <aaleksandrov@quantumbrains.com>  Tue, 17 Oct 2023 17:19:00 +0000
+
 gorb (0.1.2) unstable; urgency=medium
 
   * Fix bug which leaves backend with non zero weight if it down during
